--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "4.4.*"
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "4.4.*",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "symfony/profiler-pack": "^1.0"
